clusters/cosmos/apps/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: dashy-ingress
spec:
 tls:
 - hosts:
   - dash.cosmos.cboxlab.com
   secretName: dashy-tls-secret
 rules:
 - host: dash.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: dashy
           port:
             name: http
       path: /
       pathType: Prefix
